fix: update mobile navigation visibility for larger screens

--- a/src/app/(frontend)/globals.css
+++ b/src/app/(frontend)/globals.css
@@ -174,7 +174,7 @@ html[data-theme='light'] {
   margin-left: 2rem;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   .header-nav {
     display: none;
   }
@@ -191,54 +191,6 @@ html[data-theme='light'] {
   max-width: 100%;
   max-height: 100%;
   object-fit: contain;
-}
-
-.header-content {
-  @apply relative flex flex-1 h-full flex-col;
-}
-
-.header-row-1 {
-  @apply h-[42px] hidden md:flex items-center px-6 font-semibold text-xs text-gray-500 *:flex *:items-center;
-}
-
-.header-row-1 .phone,
-.header-row-1 .language {
-  @apply w-auto pr-4;
-}
-
-.header-row-1 .social-media {
-  @apply w-auto pl-4;
-}
-
-.header-row-1 .email {
-  @apply w-auto px-4;
-}
-
-.header-row-1 .email,
-.header-row-1 .workTime,
-.header-row-1 .social-media {
-  @apply border-l border-gray-200;
-}
-
-.header-row-1 .workTime {
-  @apply flex-1 px-4;
-}
-
-.header-row-1 .language {
-  @apply flex items-center;
-}
-
-.header-row-1 .email,
-.header-row-1 .workTime {
-  @apply hidden lg:block;
-}
-
-.header-row-1 .social-media {
-  @apply flex justify-around gap-2 *:flex *:items-center;
-}
-
-.header-row-2 {
-  @apply flex-1 flex items-center justify-between px-6 border-t border-gray-200;
 }
 
 /* HEADER END */
